--- a/cfg/sourcemod/weapons.cfg
+++ b/cfg/sourcemod/weapons.cfg
@@ -6,6 +6,11 @@
 // Default: "[wasdzone]"
 sm_weapons_chat_prefix "[wasdzone]"
 
+// Database connection name in databases.cfg to use
+// -
+// Default: "storage-local"
+sm_weapons_db_connection "storage-local"
+
 // Enable/Disable weapon float options
 // -
 // Default: "1"
