various stability improvements and new nametag system

--- a/cfg/sourcemod/weapons.cfg
+++ b/cfg/sourcemod/weapons.cfg
@@ -41,4 +41,12 @@ sm_weapons_knife_stattrak_mode "0"
 // Default: ""
 sm_weapons_table_prefix ""
 
+// Enable/Disable players overwriting other players' weapons (picked up from the ground) by using !ws command
+// -
+// Default: "1"
+sm_weapons_enable_overwrite "0"
 
+// Grace period in terms of seconds counted after round start for allowing the use of !ws command. 0 means no restrictions
+// -
+// Default: "0"
+sm_weapons_grace_period 0
