new spectrum 2 case skins. there were only english and chinese translations, so used english ones on nearly all languages for now.

--- a/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_hungarian.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Ziggy"
+	{
+		"index"		"689"
+		"classes"	"weapon_xm1014;"
+	}
+	"Exposure"
+	{
+		"index"		"688"
+		"classes"	"weapon_ump45;"
+	}
+	"Tacticat"
+	{
+		"index"		"687"
+		"classes"	"weapon_cz75a;"
+	}
+	"Phantom"
+	{
+		"index"		"686"
+		"classes"	"weapon_sg556;"
+	}
+	"Őserdei Suhanás"
+	{
+		"index"		"685"
+		"classes"	"weapon_scar20;"
+	}
+	"Cracked Opal"
+	{
+		"index"		"684"
+		"classes"	"weapon_tec9;"
+	}
+	"Llama Cannon"
+	{
+		"index"		"683"
+		"classes"	"weapon_revolver;"
+	}
+	"Óceáni"
+	{
+		"index"		"682"
+		"classes"	"weapon_mac10;"
+	}
+	"Leaded Glass"
+	{
+		"index"		"681"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Off World"
+	{
+		"index"		"680"
+		"classes"	"weapon_glock;"
+	}
+	"Goo"
+	{
+		"index"		"679"
+		"classes"	"weapon_mp9;"
+	}
+	"See Ya Later"
+	{
+		"index"		"678"
+		"classes"	"weapon_p250;"
+	}
+	"Hunter"
+	{
+		"index"		"677"
+		"classes"	"weapon_g3sg1;"
+	}
+	"High Roller"
+	{
+		"index"		"676"
+		"classes"	"weapon_bizon;"
+	}
+	"The Empress"
+	{
+		"index"		"675"
+		"classes"	"weapon_ak47;"
+	}
+	"Triqua"
+	{
+		"index"		"674"
+		"classes"	"weapon_aug;"
+	}
+	"Morris"
+	{
+		"index"		"673"
+		"classes"	"weapon_sawedoff;"
+	}
 	"Fémvirágok"
 	{
 		"index"		"672"
@@ -305,7 +390,7 @@
 		"index"		"607"
 		"classes"	"weapon_glock;"
 	}
-	"Ventilátor"
+	"Kifüstölő"
 	{
 		"index"		"606"
 		"classes"	"weapon_g3sg1;"
