--- a/addons/sourcemod/configs/weapons/weapons_schinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_schinese.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"五彩斑驳"
+	{
+		"index"		"689"
+		"classes"	"weapon_xm1014;"
+	}
+	"x射线"
+	{
+		"index"		"688"
+		"classes"	"weapon_ump45;"
+	}
+	"战术高手"
+	{
+		"index"		"687"
+		"classes"	"weapon_cz75a;"
+	}
+	"幻影"
+	{
+		"index"		"686"
+		"classes"	"weapon_sg556;"
+	}
+	"丛林滑流"
+	{
+		"index"		"685"
+		"classes"	"weapon_scar20;"
+	}
+	"碎蛋白石"
+	{
+		"index"		"684"
+		"classes"	"weapon_tec9;"
+	}
+	"美洲驼炮"
+	{
+		"index"		"683"
+		"classes"	"weapon_revolver;"
+	}
+	"海洋"
+	{
+		"index"		"682"
+		"classes"	"weapon_mac10;"
+	}
+	"破碎铅秋"
+	{
+		"index"		"681"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"异星世界"
+	{
+		"index"		"680"
+		"classes"	"weapon_glock;"
+	}
+	"焦油缠绕"
+	{
+		"index"		"679"
+		"classes"	"weapon_mp9;"
+	}
+	"生化短吻鳄"
+	{
+		"index"		"678"
+		"classes"	"weapon_p250;"
+	}
+	"猎人"
+	{
+		"index"		"677"
+		"classes"	"weapon_g3sg1;"
+	}
+	"下好离手"
+	{
+		"index"		"676"
+		"classes"	"weapon_bizon;"
+	}
+	"皇后"
+	{
+		"index"		"675"
+		"classes"	"weapon_ak47;"
+	}
+	"三角战术"
+	{
+		"index"		"674"
+		"classes"	"weapon_aug;"
+	}
+	"夜百合"
+	{
+		"index"		"673"
+		"classes"	"weapon_sawedoff;"
+	}
 	"合金绽放"
 	{
 		"index"		"672"
@@ -410,7 +495,7 @@
 		"index"		"586"
 		"classes"	"weapon_glock;"
 	}
-	"暴虐大名"
+	"霸意大名"
 	{
 		"index"		"585"
 		"classes"	"weapon_fiveseven;"
@@ -560,7 +645,7 @@
 		"index"		"556"
 		"classes"	"weapon_ump45;"
 	}
-	"再次深入"
+	"战火重燃"
 	{
 		"index"		"555"
 		"classes"	"weapon_tec9;"
@@ -2925,7 +3010,7 @@
 		"index"		"5"
 		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"太妃糖苹果色"
+	"红苹果"
 	{
 		"index"		"3"
 		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
