--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,36 +1,121 @@
 "Skins"
 {
-	"null"
+	"Ziggy"
+	{
+		"index"		"689"
+		"classes"	"weapon_xm1014;"
+	}
+	"Exposure"
+	{
+		"index"		"688"
+		"classes"	"weapon_ump45;"
+	}
+	"Tacticat"
+	{
+		"index"		"687"
+		"classes"	"weapon_cz75a;"
+	}
+	"Phantom"
+	{
+		"index"		"686"
+		"classes"	"weapon_sg556;"
+	}
+	"叢林滑流"
+	{
+		"index"		"685"
+		"classes"	"weapon_scar20;"
+	}
+	"Cracked Opal"
+	{
+		"index"		"684"
+		"classes"	"weapon_tec9;"
+	}
+	"Llama Cannon"
+	{
+		"index"		"683"
+		"classes"	"weapon_revolver;"
+	}
+	"海洋"
+	{
+		"index"		"682"
+		"classes"	"weapon_mac10;"
+	}
+	"Leaded Glass"
+	{
+		"index"		"681"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Off World"
+	{
+		"index"		"680"
+		"classes"	"weapon_glock;"
+	}
+	"Goo"
+	{
+		"index"		"679"
+		"classes"	"weapon_mp9;"
+	}
+	"See Ya Later"
+	{
+		"index"		"678"
+		"classes"	"weapon_p250;"
+	}
+	"Hunter"
+	{
+		"index"		"677"
+		"classes"	"weapon_g3sg1;"
+	}
+	"High Roller"
+	{
+		"index"		"676"
+		"classes"	"weapon_bizon;"
+	}
+	"The Empress"
+	{
+		"index"		"675"
+		"classes"	"weapon_ak47;"
+	}
+	"Triqua"
+	{
+		"index"		"674"
+		"classes"	"weapon_aug;"
+	}
+	"Morris"
+	{
+		"index"		"673"
+		"classes"	"weapon_sawedoff;"
+	}
+	"金屬花卉"
 	{
 		"index"		"672"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"紙雕塗飾"
 	{
 		"index"		"671"
 		"classes"	"weapon_tec9;"
 	}
-	"null"
+	"鬼臉天蛾"
 	{
 		"index"		"670"
 		"classes"	"weapon_ssg08;"
 	}
-	"null"
+	"亡攫"
 	{
 		"index"		"669"
 		"classes"	"weapon_p90;"
 	}
-	"null"
+	"紅岩"
 	{
 		"index"		"668"
 		"classes"	"weapon_p250;"
 	}
-	"null"
+	"森林獵人"
 	{
 		"index"		"667"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"硬水"
 	{
 		"index"		"666"
 		"classes"	"weapon_mag7;"
@@ -40,47 +125,47 @@
 		"index"		"665"
 		"classes"	"weapon_mac10;"
 	}
-	"null"
+	"地獄火"
 	{
 		"index"		"664"
 		"classes"	"weapon_m4a1;"
 	}
-	"null"
+	"簡報"
 	{
 		"index"		"663"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"鬼退治"
 	{
 		"index"		"662"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"高糖亢奮"
 	{
 		"index"		"661"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"亢奮野獸"
 	{
 		"index"		"660"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"群骨亂舞"
 	{
 		"index"		"659"
 		"classes"	"weapon_famas;"
 	}
-	"null"
+	"眼鏡蛇逆襲"
 	{
 		"index"		"658"
 		"classes"	"weapon_elite;"
 	}
-	"null"
+	"藍圖"
 	{
 		"index"		"657"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"環球一號"
 	{
 		"index"		"656"
 		"classes"	"weapon_ak47;"
