--- a/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_brazilian.cfg
@@ -1,11 +1,96 @@
 "Skins"
 {
+	"Ziggy"
+	{
+		"index"		"689"
+		"classes"	"weapon_xm1014;"
+	}
+	"Exposure"
+	{
+		"index"		"688"
+		"classes"	"weapon_ump45;"
+	}
+	"Tacticat"
+	{
+		"index"		"687"
+		"classes"	"weapon_cz75a;"
+	}
+	"Phantom"
+	{
+		"index"		"686"
+		"classes"	"weapon_sg556;"
+	}
+	"Turbilhão da Selva"
+	{
+		"index"		"685"
+		"classes"	"weapon_scar20;"
+	}
+	"Cracked Opal"
+	{
+		"index"		"684"
+		"classes"	"weapon_tec9;"
+	}
+	"Llama Cannon"
+	{
+		"index"		"683"
+		"classes"	"weapon_revolver;"
+	}
+	"Oceânica"
+	{
+		"index"		"682"
+		"classes"	"weapon_mac10;"
+	}
+	"Leaded Glass"
+	{
+		"index"		"681"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Off World"
+	{
+		"index"		"680"
+		"classes"	"weapon_glock;"
+	}
+	"Goo"
+	{
+		"index"		"679"
+		"classes"	"weapon_mp9;"
+	}
+	"See Ya Later"
+	{
+		"index"		"678"
+		"classes"	"weapon_p250;"
+	}
+	"Hunter"
+	{
+		"index"		"677"
+		"classes"	"weapon_g3sg1;"
+	}
+	"High Roller"
+	{
+		"index"		"676"
+		"classes"	"weapon_bizon;"
+	}
+	"The Empress"
+	{
+		"index"		"675"
+		"classes"	"weapon_ak47;"
+	}
+	"Triqua"
+	{
+		"index"		"674"
+		"classes"	"weapon_aug;"
+	}
+	"Morris"
+	{
+		"index"		"673"
+		"classes"	"weapon_sawedoff;"
+	}
 	"Flores Metálicas"
 	{
 		"index"		"672"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"Talhada"
 	{
 		"index"		"671"
 		"classes"	"weapon_tec9;"
@@ -15,7 +100,7 @@
 		"index"		"670"
 		"classes"	"weapon_ssg08;"
 	}
-	"null"
+	"Aperto da Morte"
 	{
 		"index"		"669"
 		"classes"	"weapon_p90;"
@@ -45,7 +130,7 @@
 		"index"		"664"
 		"classes"	"weapon_m4a1;"
 	}
-	"null"
+	"Instrução"
 	{
 		"index"		"663"
 		"classes"	"weapon_m4a1_silencer;"
@@ -55,12 +140,12 @@
 		"index"		"662"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"Açucarada"
 	{
 		"index"		"661"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"Hiper Fera"
 	{
 		"index"		"660"
 		"classes"	"weapon_fiveseven;"
@@ -75,12 +160,12 @@
 		"index"		"658"
 		"classes"	"weapon_elite;"
 	}
-	"null"
+	"Projeto"
 	{
 		"index"		"657"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"Órbita Mk01"
 	{
 		"index"		"656"
 		"classes"	"weapon_ak47;"
