--- a/addons/sourcemod/configs/weapons/weapons_korean.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_korean.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Ziggy"
+	{
+		"index"		"689"
+		"classes"	"weapon_xm1014;"
+	}
+	"Exposure"
+	{
+		"index"		"688"
+		"classes"	"weapon_ump45;"
+	}
+	"Tacticat"
+	{
+		"index"		"687"
+		"classes"	"weapon_cz75a;"
+	}
+	"Phantom"
+	{
+		"index"		"686"
+		"classes"	"weapon_sg556;"
+	}
+	"정글 질주"
+	{
+		"index"		"685"
+		"classes"	"weapon_scar20;"
+	}
+	"Cracked Opal"
+	{
+		"index"		"684"
+		"classes"	"weapon_tec9;"
+	}
+	"Llama Cannon"
+	{
+		"index"		"683"
+		"classes"	"weapon_revolver;"
+	}
+	"푸르른 대양"
+	{
+		"index"		"682"
+		"classes"	"weapon_mac10;"
+	}
+	"Leaded Glass"
+	{
+		"index"		"681"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Off World"
+	{
+		"index"		"680"
+		"classes"	"weapon_glock;"
+	}
+	"Goo"
+	{
+		"index"		"679"
+		"classes"	"weapon_mp9;"
+	}
+	"See Ya Later"
+	{
+		"index"		"678"
+		"classes"	"weapon_p250;"
+	}
+	"Hunter"
+	{
+		"index"		"677"
+		"classes"	"weapon_g3sg1;"
+	}
+	"High Roller"
+	{
+		"index"		"676"
+		"classes"	"weapon_bizon;"
+	}
+	"The Empress"
+	{
+		"index"		"675"
+		"classes"	"weapon_ak47;"
+	}
+	"Triqua"
+	{
+		"index"		"674"
+		"classes"	"weapon_aug;"
+	}
+	"Morris"
+	{
+		"index"		"673"
+		"classes"	"weapon_sawedoff;"
+	}
 	"강철 꽃송이"
 	{
 		"index"		"672"
@@ -85,47 +170,47 @@
 		"index"		"656"
 		"classes"	"weapon_ak47;"
 	}
-	"null"
+	"잔더"
 	{
 		"index"		"655"
 		"classes"	"weapon_sawedoff;"
 	}
-	"null"
+	"사계절"
 	{
 		"index"		"654"
 		"classes"	"weapon_xm1014;"
 	}
-	"null"
+	"차세대 느와르"
 	{
 		"index"		"653"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"사형집행"
 	{
 		"index"		"652"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"마지막 다이빙"
 	{
 		"index"		"651"
 		"classes"	"weapon_mac10;"
 	}
-	"null"
+	"파란 물결"
 	{
 		"index"		"650"
 		"classes"	"weapon_p250;"
 	}
-	"null"
+	"전쟁 나팔"
 	{
 		"index"		"649"
 		"classes"	"weapon_mp7;"
 	}
-	"null"
+	"에메랄드 독화살"
 	{
 		"index"		"648"
 		"classes"	"weapon_m249;"
 	}
-	"null"
+	"핏빛 쓰나미"
 	{
 		"index"		"647"
 		"classes"	"weapon_galilar;"
@@ -155,12 +240,12 @@
 		"index"		"642"
 		"classes"	"weapon_scar20;"
 	}
-	"null"
+	"정글 질주"
 	{
 		"index"		"641"
 		"classes"	"weapon_bizon;"
 	}
-	"null"
+	"꿈꾸는 열병"
 	{
 		"index"		"640"
 		"classes"	"weapon_awp;"
