translation updates to skins

--- a/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_bulgarian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Ziggy"
+	"Целофан"
 	{
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Излагане"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"Tacticat"
+	"Тактическа котка"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Фантом"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Напукан опал"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Оръдейна лама"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,47 +40,47 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Кварцово стъкло"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Отвъдно"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Слуз"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Чао до скив"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Ловец"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Комарджия с големи облози"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"Императрицата"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
 	}
-	"Triqua"
+	"Тройно качество"
 	{
 		"index"		"674"
 		"classes"	"weapon_aug;"
 	}
-	"Morris"
+	"Морис"
 	{
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
@@ -1010,7 +1010,7 @@
 		"index"		"486"
 		"classes"	"weapon_p90;"
 	}
-	"Пистолет"
+	"Пищов"
 	{
 		"index"		"485"
 		"classes"	"weapon_hkp2000;"
