--- a/addons/sourcemod/configs/weapons/weapons_italian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_italian.cfg
@@ -5,7 +5,7 @@
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Esposizione"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
@@ -15,7 +15,7 @@
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Fantasma"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Opale crepato"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Cannone lama"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,37 +40,37 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Vetro piombato"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Fuori dal mondo"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Viscido"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Alla prossima"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Cacciatore"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Mani bucate"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"L'imperatrice"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
@@ -90,22 +90,22 @@
 		"index"		"672"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"Gesso"
 	{
 		"index"		"671"
 		"classes"	"weapon_tec9;"
 	}
-	"null"
+	"Sfinge testa di morto"
 	{
 		"index"		"670"
 		"classes"	"weapon_ssg08;"
 	}
-	"null"
+	"Presa mortale"
 	{
 		"index"		"669"
 		"classes"	"weapon_p90;"
 	}
-	"null"
+	"Ocra rossa"
 	{
 		"index"		"668"
 		"classes"	"weapon_p250;"
@@ -115,7 +115,7 @@
 		"index"		"667"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Acqua minerale"
 	{
 		"index"		"666"
 		"classes"	"weapon_mag7;"
@@ -125,7 +125,7 @@
 		"index"		"665"
 		"classes"	"weapon_mac10;"
 	}
-	"null"
+	"Fuoco infernale"
 	{
 		"index"		"664"
 		"classes"	"weapon_m4a1;"
@@ -140,22 +140,22 @@
 		"index"		"662"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"Iperglicemia"
 	{
 		"index"		"661"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"Bestia dimensionale"
 	{
 		"index"		"660"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Macabro"
 	{
 		"index"		"659"
 		"classes"	"weapon_famas;"
 	}
-	"null"
+	"Cobra velenoso"
 	{
 		"index"		"658"
 		"classes"	"weapon_elite;"
@@ -205,7 +205,7 @@
 		"index"		"649"
 		"classes"	"weapon_mp7;"
 	}
-	"null"
+	"Freccia avvelenata smeraldo"
 	{
 		"index"		"648"
 		"classes"	"weapon_m249;"
