--- a/addons/sourcemod/configs/weapons/weapons_korean.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_korean.cfg
@@ -30,7 +30,7 @@
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"대포 라마"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -55,7 +55,7 @@
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"작별인사"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
