--- a/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_norwegian.cfg
@@ -260,32 +260,32 @@
 		"index"		"638"
 		"classes"	"weapon_sawedoff;"
 	}
-	"null"
+	"Cyrex"
 	{
 		"index"		"637"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"Shallow Grave"
 	{
 		"index"		"636"
 		"classes"	"weapon_p90;"
 	}
-	"null"
+	"Turf"
 	{
 		"index"		"635"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Gila"
 	{
 		"index"		"634"
 		"classes"	"weapon_nova;"
 	}
-	"null"
+	"Sonar"
 	{
 		"index"		"633"
 		"classes"	"weapon_mag7;"
 	}
-	"null"
+	"Buzz Kill"
 	{
 		"index"		"632"
 		"classes"	"weapon_m4a1;"
@@ -295,27 +295,27 @@
 		"index"		"631"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Sand Scale"
 	{
 		"index"		"630"
 		"classes"	"weapon_mp9;"
 	}
-	"null"
+	"Black Sand"
 	{
 		"index"		"629"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"Stinger"
 	{
 		"index"		"628"
 		"classes"	"weapon_g3sg1;"
 	}
-	"null"
+	"Cirrus"
 	{
 		"index"		"627"
 		"classes"	"weapon_mp7;"
 	}
-	"null"
+	"Mecha Industries"
 	{
 		"index"		"626"
 		"classes"	"weapon_famas;"
@@ -325,7 +325,7 @@
 		"index"		"625"
 		"classes"	"weapon_elite;"
 	}
-	"null"
+	"Dragonfire"
 	{
 		"index"		"624"
 		"classes"	"weapon_ssg08;"
@@ -405,12 +405,12 @@
 		"index"		"604"
 		"classes"	"weapon_famas;"
 	}
-	"null"
+	"Directive"
 	{
 		"index"		"603"
 		"classes"	"weapon_deagle;"
 	}
-	"null"
+	"Imprint"
 	{
 		"index"		"602"
 		"classes"	"weapon_cz75a;"
@@ -465,7 +465,7 @@
 		"index"		"592"
 		"classes"	"weapon_p250;"
 	}
-	"null"
+	"Imperial Dragon"
 	{
 		"index"		"591"
 		"classes"	"weapon_hkp2000;"
@@ -490,7 +490,7 @@
 		"index"		"587"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Wasteland Rebel"
 	{
 		"index"		"586"
 		"classes"	"weapon_glock;"
@@ -510,17 +510,17 @@
 		"index"		"583"
 		"classes"	"weapon_aug;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"582"
 		"classes"	"weapon_knife_karambit;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"581"
 		"classes"	"weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Freehand"
 	{
 		"index"		"580"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;"
@@ -535,77 +535,77 @@
 		"index"		"578"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"577"
 		"classes"	"weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"576"
 		"classes"	"weapon_knife_karambit;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"575"
 		"classes"	"weapon_knife_gut;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"574"
 		"classes"	"weapon_knife_flip;"
 	}
-	"null"
+	"Autotronic"
 	{
 		"index"		"573"
 		"classes"	"weapon_bayonet;"
 	}
-	"null (Phase 4)"
+	"Gamma Doppler (Phase 4)"
 	{
 		"index"		"572"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"null (Phase 3)"
+	"Gamma Doppler (Phase 3)"
 	{
 		"index"		"571"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"null (Phase 2)"
+	"Gamma Doppler (Phase 2)"
 	{
 		"index"		"570"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"null (Phase 1)"
+	"Gamma Doppler (Phase 1)"
 	{
 		"index"		"569"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"null (Emerald)"
+	"Gamma Doppler (Emerald)"
 	{
 		"index"		"568"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Black Laminate"
 	{
 		"index"		"567"
 		"classes"	"weapon_knife_m9_bayonet;"
 	}
-	"null"
+	"Black Laminate"
 	{
 		"index"		"566"
 		"classes"	"weapon_knife_karambit;"
 	}
-	"null"
+	"Black Laminate"
 	{
 		"index"		"565"
 		"classes"	"weapon_knife_gut;"
 	}
-	"null"
+	"Black Laminate"
 	{
 		"index"		"564"
 		"classes"	"weapon_knife_flip;"
 	}
-	"null"
+	"Black Laminate"
 	{
 		"index"		"563"
 		"classes"	"weapon_bayonet;"
@@ -675,7 +675,7 @@
 		"index"		"550"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Bioleak"
 	{
 		"index"		"549"
 		"classes"	"weapon_mp9;"
@@ -685,7 +685,7 @@
 		"index"		"548"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Spectre"
 	{
 		"index"		"547"
 		"classes"	"weapon_m249;"
@@ -700,7 +700,7 @@
 		"index"		"545"
 		"classes"	"weapon_g3sg1;"
 	}
-	"null"
+	"Ventilators"
 	{
 		"index"		"544"
 		"classes"	"weapon_elite;"
