--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -5,17 +5,17 @@
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Naświetlenie"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"Tacticat"
+	"Taktykot"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Upiór"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Pęknięty opal"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Działo lamy"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,37 +40,37 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Szkło ołowiowe"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Nie z tego świata"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Maź"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Daj pyska"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Łowca"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Wysoka stawka"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"Cesarzowa"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
@@ -165,7 +165,7 @@
 		"index"		"657"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Orbit wz. 01"
+	"Orbita wz. 01"
 	{
 		"index"		"656"
 		"classes"	"weapon_ak47;"
@@ -1730,7 +1730,7 @@
 		"index"		"339"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Pulse"
+	"Puls"
 	{
 		"index"		"338"
 		"classes"	"weapon_hkp2000;"
@@ -1970,7 +1970,7 @@
 		"index"		"288"
 		"classes"	"weapon_famas;"
 	}
-	"Pulse"
+	"Puls"
 	{
 		"index"		"287"
 		"classes"	"weapon_sg556;"
@@ -2105,7 +2105,7 @@
 		"index"		"261"
 		"classes"	"weapon_elite;"
 	}
-	"Pulse"
+	"Puls"
 	{
 		"index"		"260"
 		"classes"	"weapon_famas;"
