--- a/addons/sourcemod/configs/weapons/weapons_russian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_russian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Ziggy"
+	"Зигги"
 	{
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Облучение"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"Tacticat"
+	"Тактикотик"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Фантом"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Треснувший опал"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Лама-пушка"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,47 +40,47 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Хрусталь"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Пришелец"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Слизь"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Прощальный оскал"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Следопыт"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Азарт"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"Императрица"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
 	}
-	"Triqua"
+	"Квадрант"
 	{
 		"index"		"674"
 		"classes"	"weapon_aug;"
 	}
-	"Morris"
+	"Моррис"
 	{
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
