--- a/addons/sourcemod/configs/weapons/weapons_spanish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_spanish.cfg
@@ -5,17 +5,17 @@
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Exposición"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"Tacticat"
+	"Gatáctica"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Fantasma"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Ópalo agrietado"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Cañón llama"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,37 +40,37 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Vidrio de plomo"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"De otro mundo"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Viscosidad"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Hasta luego"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Cazador"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Gran apostador"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"Emperatriz"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
@@ -875,7 +875,7 @@
 		"index"		"514"
 		"classes"	"weapon_negev;"
 	}
-	"Paladín Real"
+	"Paladín real"
 	{
 		"index"		"512"
 		"classes"	"weapon_m4a1;"
@@ -1025,7 +1025,7 @@
 		"index"		"483"
 		"classes"	"weapon_negev;"
 	}
-	"Rubí de Dardo Venenoso"
+	"Dardo venenoso rubí"
 	{
 		"index"		"482"
 		"classes"	"weapon_mp9;"
@@ -1365,7 +1365,7 @@
 		"index"		"414"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
 	}
-	"Fundido Mármol"
+	"Mármol desteñido"
 	{
 		"index"		"413"
 		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
@@ -1760,7 +1760,7 @@
 		"index"		"333"
 		"classes"	"weapon_mac10;weapon_ump45;"
 	}
-	"Azul Real"
+	"Azul real"
 	{
 		"index"		"332"
 		"classes"	"weapon_usp_silencer;"
@@ -2070,7 +2070,7 @@
 		"index"		"268"
 		"classes"	"weapon_cz75a;"
 	}
-	"Tonalidad de Cobalto"
+	"Semitono de cobalto"
 	{
 		"index"		"267"
 		"classes"	"weapon_bizon;"
