--- a/addons/sourcemod/configs/weapons/weapons_greek.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_greek.cfg
@@ -85,87 +85,87 @@
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
 	}
-	"null"
+	"Metal Flowers"
 	{
 		"index"		"672"
 		"classes"	"weapon_ump45;"
 	}
-	"null"
+	"Cut Out"
 	{
 		"index"		"671"
 		"classes"	"weapon_tec9;"
 	}
-	"null"
+	"Death's Head"
 	{
 		"index"		"670"
 		"classes"	"weapon_ssg08;"
 	}
-	"null"
+	"Death Grip"
 	{
 		"index"		"669"
 		"classes"	"weapon_p90;"
 	}
-	"null"
+	"Red Rock"
 	{
 		"index"		"668"
 		"classes"	"weapon_p250;"
 	}
-	"null"
+	"Woodsman"
 	{
 		"index"		"667"
 		"classes"	"weapon_hkp2000;"
 	}
-	"null"
+	"Hard Water"
 	{
 		"index"		"666"
 		"classes"	"weapon_mag7;"
 	}
-	"null"
+	"Aloha"
 	{
 		"index"		"665"
 		"classes"	"weapon_mac10;"
 	}
-	"null"
+	"Hellfire"
 	{
 		"index"		"664"
 		"classes"	"weapon_m4a1;"
 	}
-	"null"
+	"Briefing"
 	{
 		"index"		"663"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"null"
+	"Oni Taiji"
 	{
 		"index"		"662"
 		"classes"	"weapon_awp;"
 	}
-	"null"
+	"Sugar Rush"
 	{
 		"index"		"661"
 		"classes"	"weapon_galilar;"
 	}
-	"null"
+	"Hyper Beast"
 	{
 		"index"		"660"
 		"classes"	"weapon_fiveseven;"
 	}
-	"null"
+	"Macabre"
 	{
 		"index"		"659"
 		"classes"	"weapon_famas;"
 	}
-	"null"
+	"Cobra Strike"
 	{
 		"index"		"658"
 		"classes"	"weapon_elite;"
 	}
-	"null"
+	"Blueprint"
 	{
 		"index"		"657"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"null"
+	"Orbit Mk01"
 	{
 		"index"		"656"
 		"classes"	"weapon_ak47;"
