--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -5,7 +5,7 @@
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Teşhir"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
@@ -15,7 +15,7 @@
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Hayalet"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Çatlamış Opal"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Lama Topu"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,47 +40,47 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Kurşunlu Vitray"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Dünya Dışı"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Yapışkan"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Sonra Görüşürüz"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Avcı"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Savurgan"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"İmparatoriçe"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
 	}
-	"Triqua"
+	"Üç Kenarlı"
 	{
 		"index"		"674"
 		"classes"	"weapon_aug;"
 	}
-	"Morris"
+	"Bahar Dansı"
 	{
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
