--- a/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_ukrainian.cfg
@@ -1,21 +1,21 @@
 "Skins"
 {
-	"Ziggy"
+	"Зіґґі"
 	{
 		"index"		"689"
 		"classes"	"weapon_xm1014;"
 	}
-	"Exposure"
+	"Експозиція"
 	{
 		"index"		"688"
 		"classes"	"weapon_ump45;"
 	}
-	"Tacticat"
+	"Тактикіт"
 	{
 		"index"		"687"
 		"classes"	"weapon_cz75a;"
 	}
-	"Phantom"
+	"Фантом"
 	{
 		"index"		"686"
 		"classes"	"weapon_sg556;"
@@ -25,12 +25,12 @@
 		"index"		"685"
 		"classes"	"weapon_scar20;"
 	}
-	"Cracked Opal"
+	"Тріснутий опал"
 	{
 		"index"		"684"
 		"classes"	"weapon_tec9;"
 	}
-	"Llama Cannon"
+	"Ламогармата"
 	{
 		"index"		"683"
 		"classes"	"weapon_revolver;"
@@ -40,47 +40,47 @@
 		"index"		"682"
 		"classes"	"weapon_mac10;"
 	}
-	"Leaded Glass"
+	"Кришталь"
 	{
 		"index"		"681"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Off World"
+	"Неземний"
 	{
 		"index"		"680"
 		"classes"	"weapon_glock;"
 	}
-	"Goo"
+	"Смола"
 	{
 		"index"		"679"
 		"classes"	"weapon_mp9;"
 	}
-	"See Ya Later"
+	"Ще побачимось"
 	{
 		"index"		"678"
 		"classes"	"weapon_p250;"
 	}
-	"Hunter"
+	"Мисливець"
 	{
 		"index"		"677"
 		"classes"	"weapon_g3sg1;"
 	}
-	"High Roller"
+	"Азартний гравець"
 	{
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"The Empress"
+	"Імператриця"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
 	}
-	"Triqua"
+	"Триква"
 	{
 		"index"		"674"
 		"classes"	"weapon_aug;"
 	}
-	"Morris"
+	"Морріс"
 	{
 		"index"		"673"
 		"classes"	"weapon_sawedoff;"
@@ -640,7 +640,7 @@
 		"index"		"557"
 		"classes"	"weapon_xm1014;"
 	}
-	"Первісна шабля"
+	"Саблезубий"
 	{
 		"index"		"556"
 		"classes"	"weapon_ump45;"
