--- a/cfg/sourcemod/weapons.cfg
+++ b/cfg/sourcemod/weapons.cfg
@@ -1,10 +1,10 @@
-// ConVars for plugin "Weapons&Knives by kgns"
+// ConVars for plugin "Weapons & Knives by kgns | oyunhost.net"
 
 
 // Prefix for chat messages
 // -
-// Default: "[wasdzone]"
-sm_weapons_chat_prefix "[wasdzone]"
+// Default: "[oyunhost.net]"
+sm_weapons_chat_prefix "[oyunhost.net]"
 
 // Database connection name in databases.cfg to use
 // -
@@ -21,6 +21,11 @@ sm_weapons_enable_float "1"
 // Default: "1"
 sm_weapons_enable_nametag "1"
 
+// Enable/Disable players overwriting other players' weapons (picked up from the ground) by using !ws command
+// -
+// Default: "1"
+sm_weapons_enable_overwrite "0"
+
 // Enable/Disable StatTrak options
 // -
 // Default: "1"
@@ -31,6 +36,16 @@ sm_weapons_enable_stattrak "1"
 // Default: "0.05"
 sm_weapons_float_increment_size "0.05"
 
+// Grace period in terms of seconds counted after round start for allowing the use of !ws command. 0 means no restrictions
+// -
+// Default: "0"
+sm_weapons_grace_period 0
+
+// Number of days before a player (SteamID) is marked as inactive and his data is deleted. (0 or any negative value to disable deleting)
+// -
+// Default: "30"
+sm_weapons_inactive_days 30
+
 // 0: All knives have same StatTrak counter 1: Each type of knife has its separate StatTrak counter
 // -
 // Default: "0"
@@ -40,13 +55,3 @@ sm_weapons_knife_stattrak_mode "0"
 // -
 // Default: ""
 sm_weapons_table_prefix ""
-
-// Enable/Disable players overwriting other players' weapons (picked up from the ground) by using !ws command
-// -
-// Default: "1"
-sm_weapons_enable_overwrite "0"
-
-// Grace period in terms of seconds counted after round start for allowing the use of !ws command. 0 means no restrictions
-// -
-// Default: "0"
-sm_weapons_grace_period 0
