new config files for the new clutch case

--- a/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_tchinese.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Oxide Blaze"
+	{
+		"index"		"706"
+		"classes"	"weapon_xm1014;"
+	}
+	"Cortex"
+	{
+		"index"		"705"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Arctic Wolf"
+	{
+		"index"		"704"
+		"classes"	"weapon_ump45;"
+	}
+	"SWAG-7"
+	{
+		"index"		"703"
+		"classes"	"weapon_mag7;"
+	}
+	"Aloha"
+	{
+		"index"		"702"
+		"classes"	"weapon_sg556;"
+	}
+	"Grip"
+	{
+		"index"		"701"
+		"classes"	"weapon_revolver;"
+	}
+	"Urban Hazard"
+	{
+		"index"		"700"
+		"classes"	"weapon_hkp2000;"
+	}
+	"Wild Six"
+	{
+		"index"		"699"
+		"classes"	"weapon_nova;"
+	}
+	"Lionfish"
+	{
+		"index"		"698"
+		"classes"	"weapon_negev;"
+	}
+	"Black Sand"
+	{
+		"index"		"697"
+		"classes"	"weapon_mp9;"
+	}
+	"Bloodsport"
+	{
+		"index"		"696"
+		"classes"	"weapon_mp7;"
+	}
+	"Neo-Noir"
+	{
+		"index"		"695"
+		"classes"	"weapon_m4a1;"
+	}
+	"Moonrise"
+	{
+		"index"		"694"
+		"classes"	"weapon_glock;"
+	}
+	"Flame Test"
+	{
+		"index"		"693"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Night Riot"
+	{
+		"index"		"692"
+		"classes"	"weapon_bizon;"
+	}
+	"Mortis"
+	{
+		"index"		"691"
+		"classes"	"weapon_awp;"
+	}
+	"Stymphalian"
+	{
+		"index"		"690"
+		"classes"	"weapon_aug;"
+	}
 	"炫酷包裝"
 	{
 		"index"		"689"
