mp5sd and new skins

--- a/addons/sourcemod/configs/weapons/weapons_english.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_english.cfg
@@ -1,5 +1,175 @@
 "Skins"
 {
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Rust Coat"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
+	}
 	"Night Stripe"
 	{
 		"index"		"735"
@@ -2923,7 +3093,7 @@
 	"Mudder"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Pink DDPAT"
 	{
@@ -3188,7 +3358,7 @@
 	"Candy Apple"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Groundwater"
 	{
