--- a/addons/sourcemod/configs/weapons/weapons_turkish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_turkish.cfg
@@ -1,11 +1,181 @@
 "Skins"
 {
-	"Night Stripe"
+	"High Beam"
+	{
+		"index"		"799"
+		"classes"	"weapon_glock;"
+	}
+	"Nitro"
+	{
+		"index"		"798"
+		"classes"	"weapon_revolver;"
+	}
+	"Brake Light"
+	{
+		"index"		"797"
+		"classes"	"weapon_sawedoff;"
+	}
+	"Check Engine"
+	{
+		"index"		"796"
+		"classes"	"weapon_usp_silencer;"
+	}
+	"Safety Net"
+	{
+		"index"		"795"
+		"classes"	"weapon_ak47;"
+	}
+	"Sweeper"
+	{
+		"index"		"794"
+		"classes"	"weapon_aug;"
+	}
+	"Converter"
+	{
+		"index"		"793"
+		"classes"	"weapon_m4a1;"
+	}
+	"Slide"
+	{
+		"index"		"755"
+		"classes"	"weapon_mp9;"
+	}
+	"Pas Kaplı"
+	{
+		"index"		"754"
+		"classes"	"weapon_mag7;"
+	}
+	"Dirt Drop"
+	{
+		"index"		"753"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Fade"
+	{
+		"index"		"752"
+		"classes"	"weapon_mp7;"
+	}
+	"Hand Brake"
+	{
+		"index"		"751"
+		"classes"	"weapon_ssg08;"
+	}
+	"Integrale"
+	{
+		"index"		"750"
+		"classes"	"weapon_sg556;"
+	}
+	"Vino Primo"
+	{
+		"index"		"749"
+		"classes"	"weapon_p250;"
+	}
+	"Calf Skin"
+	{
+		"index"		"748"
+		"classes"	"weapon_mac10;"
+	}
+	"Twin Turbo"
+	{
+		"index"		"747"
+		"classes"	"weapon_elite;"
+	}
+	"Control Panel"
+	{
+		"index"		"792"
+		"classes"	"weapon_m4a1_silencer;"
+	}
+	"Remote Control"
+	{
+		"index"		"791"
+		"classes"	"weapon_tec9;"
+	}
+	"Cold Fusion"
+	{
+		"index"		"790"
+		"classes"	"weapon_galilar;"
+	}
+	"Nuclear Garden"
+	{
+		"index"		"789"
+		"classes"	"weapon_glock;"
+	}
+	"Acheron"
+	{
+		"index"		"788"
+		"classes"	"weapon_awp;"
+	}
+	"Core Breach"
+	{
+		"index"		"787"
+		"classes"	"weapon_mag7;"
+	}
+	"Exchanger"
+	{
+		"index"		"786"
+		"classes"	"weapon_p250;"
+	}
+	"Mandrel"
+	{
+		"index"		"785"
+		"classes"	"weapon_nova;"
+	}
+	"Coolant"
+	{
+		"index"		"784"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Bulkhead"
+	{
+		"index"		"783"
+		"classes"	"weapon_negev;"
+	}
+	"Motherboard"
+	{
+		"index"		"782"
+		"classes"	"weapon_mp7;"
+	}
+	"Co-Processor"
+	{
+		"index"		"781"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Mainframe"
+	{
+		"index"		"780"
+		"classes"	"weapon_m4a1;"
+	}
+	"Random Access"
+	{
+		"index"		"779"
+		"classes"	"weapon_aug;"
+	}
+	"Facility Dark"
+	{
+		"index"		"778"
+		"classes"	"weapon_ump45;"
+	}
+	"Facility Draft"
+	{
+		"index"		"777"
+		"classes"	"weapon_p250;"
+	}
+	"Facility Negative"
+	{
+		"index"		"776"
+		"classes"	"weapon_p90;"
+	}
+	"Facility Sketch"
+	{
+		"index"		"775"
+		"classes"	"weapon_bizon;"
+	}
+	"Gece Çizgisi"
 	{
 		"index"		"735"
 		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Eye of Athena"
+	"Athena'nın Gözü"
 	{
 		"index"		"723"
 		"classes"	"weapon_famas;"
@@ -15,77 +185,77 @@
 		"index"		"722"
 		"classes"	"weapon_tec9;"
 	}
-	"Survivalist"
+	"Hayatta Kalma Uzmanı"
 	{
 		"index"		"721"
 		"classes"	"weapon_revolver;"
 	}
-	"Devourer"
+	"Yok Edici"
 	{
 		"index"		"720"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Powercore"
+	"Güç Çekirdeği"
 	{
 		"index"		"719"
 		"classes"	"weapon_mp7;"
 	}
-	"PAW"
+	"PATİ"
 	{
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Çekiş"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
 	}
-	"Toy Soldier"
+	"Oyuncak Asker"
 	{
 		"index"		"716"
 		"classes"	"weapon_nova;"
 	}
-	"Capillary"
+	"Kılcal Damar"
 	{
 		"index"		"715"
 		"classes"	"weapon_mp9;"
 	}
-	"Nightmare"
+	"Kabus"
 	{
 		"index"		"714"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Warhawk"
+	"Savaş Şahini"
 	{
 		"index"		"713"
 		"classes"	"weapon_glock;"
 	}
-	"High Seas"
+	"Yüksek Dalgalar"
 	{
 		"index"		"712"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Code Red"
+	"Kırmızı Alarm"
 	{
 		"index"		"711"
 		"classes"	"weapon_deagle;"
 	}
-	"Shred"
+	"Parça"
 	{
 		"index"		"710"
 		"classes"	"weapon_elite;"
 	}
-	"Eco"
+	"Eko"
 	{
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Kehribar Rüzgârı"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Neon Sürücü"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
@@ -2923,7 +3093,7 @@
 	"Çamurlu"
 	{
 		"index"		"90"
-		"classes"	"weapon_deagle;"
+		"classes"	"weapon_deagle;weapon_ump45;"
 	}
 	"Pembe DDPAT"
 	{
@@ -3188,7 +3358,7 @@
 	"Elma Şekeri"
 	{
 		"index"		"3"
-		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_nova;"
+		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
 	}
 	"Yeraltı Suyu"
 	{
